--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,8 +6,13 @@
   "fileTree": {
     "expandedDirs": [
       "src",
-      "tehservice-avto-komarovo",
-      "tehservice-avto-komarovo/src"
+      "tehservice-avto-komarovo/src",
+      "tehservice-avto-klukova/src",
+      "tehservice-avto-gunatovskaya/src",
+      "tehservice-avto-krasnopolyznskay/src",
+      "tehservice-avto-magistralnaya/src",
+      "tehservice-avto-mokva",
+      "tehservice-avto-mokva/src"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
