Изменение Логотипа в ПК и в Мобилке

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -7,12 +7,12 @@
     "expandedDirs": [
       "src",
       "tehservice-avto-komarovo/src",
-      "tehservice-avto-klukova/src",
       "tehservice-avto-gunatovskaya/src",
       "tehservice-avto-krasnopolyznskay/src",
       "tehservice-avto-magistralnaya/src",
-      "tehservice-avto-mokva",
-      "tehservice-avto-mokva/src"
+      "tehservice-avto-mokva/src",
+      "tehservice-avto-klukova/src",
+      "tehservice-avto-mokva"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
