--- a/prepros-6.config
+++ b/prepros-6.config
@@ -12,7 +12,13 @@
       "tehservice-avto-magistralnaya/src",
       "tehservice-avto-mokva/src",
       "tehservice-avto-klukova/src",
-      "tehservice-avto-mokva"
+      "tehservice-avto-mokva",
+      "tehosmotr-klikova/src",
+      "tehosmotr-krasnopolanskiy/src",
+      "tehosmotr-kulakova/src",
+      "tehosmotr-kztz/src",
+      "tehosmotr-patriotov",
+      "tehosmotr-patriotov/src"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
